--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "replicate": "^1.0.1",
-        "stripe": "^18.1.0"
+        "stripe": "^18.1.0",
+        "swr": "^2.3.3"
     },
     "devDependencies": {
         "@types/node": "^22.15.2",
